# eclipse-weather

./: .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  TASKS.md  docker-compose.yml  pyproject.toml
config/: models.yaml  placenames.json  sites.yaml  totality_path.json
docs/: model-fetch-plan.md  models-reference.md
scripts/: backfill_open_meteo.py  calibrate_humidity_to_cloud.py  collect_full_range.py  generate_placename_data.py  generate_tool1_manifest.py  generate_tool2_manifest.py  generate_tool3_manifest.py
src/: config.py
src/derive/: humidity_to_cloud.py
src/extract/: __init__.py  aemet_extractor.py  base.py  ecmwf_extractor.py  grib_regular_extractor.py  icon_extractor.py  meteofrance_extractor.py  open_meteo_extractor.py  registry.py
src/fetchers/: __init__.py  aemet_geotiff_fetcher.py  base.py  dwd_bz2_fetcher.py  ecmwf_opendata_fetcher.py  herbie_fetcher.py  meteofrance_fetcher.py  open_meteo_fetcher.py  registry.py
src/scheduler/: run.py
src/viz/: availability_gantt.py  basemap.py  cloud_field_comparison.py  eclipse_map.py  run_evolution.py  site_ranking.py  tool1_renderer.py
src/viz/web/: placename_picker.html  tool1_prototype.html  tool1_real.html  tool2_prototype.html  tool2_real.html  tool3_real.html
