[project]
name = "eclipse-weather"
version = "0.1.0"
description = "Multi-model cloud forecast comparison for the 2026-08-12 Spain total solar eclipse"
requires-python = ">=3.12"
dependencies = [
    "herbie-data>=2024.7.0",
    "ecmwf-opendata>=0.3.0",
    "cfgrib>=0.9.14",
    "eccodes>=1.7.0",
    "xarray>=2024.6.0",
    "rasterio>=1.3.0",
    "polars>=1.5.0",
    "pyarrow>=17.0.0",
    "matplotlib>=3.9.0",
    "plotly>=5.22.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
